--- a/shilo/style.css
+++ b/shilo/style.css
@@ -73,6 +73,27 @@ nav {
   height: 15px;
   border-radius: 50%;
 }
+
+.btn
+{
+  display: inline-block;
+  font-weight: 400;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: .25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
 .button:hover {
   transform: scale(1.1);
   transition: all 1s ease;
@@ -118,6 +139,7 @@ h2 {
   font-family: "Open Sans", sans-serif;
   color: #373449;
 }
+
 
 p {
   font-family: "Open Sans", sans-serif;
